# scumECS

./: CMakeLists.txt  LICENSE  README  README.md
include/: ComponentPool.h  EntityManager.h  EntitySearch.h  Types.h  scumECS.h
include/scumECS/: ECS.h  Entity.h  Manager.h  Pool.h  Search.h  Types.h
tests/: test.cpp  test_readme.cpp  test_search.cpp
